Fix T40362: Projected texture from spotlight doesn't scale with spotsize when changed in-game via Python

GPULamp::winmat needs to be updated after the spot size has changed.